# pos-voice-concierge

./: .claudeignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  lefthook.yml
.claude/: CLAUDE.md  settings.json  startup.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: auto-merge-dependabot.yml  ci.yml
backend/: build.gradle.kts  detekt.yml  gradle.properties  settings.gradle.kts
backend/src/main/kotlin/com/akaitigo/posvoice/: HealthResource.kt
backend/src/main/kotlin/com/akaitigo/posvoice/auth/: ApiKeyAuthMechanism.kt  ApiKeyAuthenticationRequest.kt  ApiKeyIdentityProvider.kt
backend/src/main/kotlin/com/akaitigo/posvoice/query/: AliasEntity.kt  AliasRepository.kt  InventoryEntity.kt  InventoryRepository.kt  ProductEntity.kt  QueryResource.kt  SalesEntity.kt  SalesRepository.kt
backend/src/main/kotlin/com/akaitigo/posvoice/voice/: VoiceEngineClient.kt  VoiceWebSocket.kt
backend/src/main/proto/: query_service.proto  voice_service.proto
backend/src/main/resources/: application.properties
backend/src/main/resources/db/migration/: V1__create_products_and_aliases.sql  V2__create_sales_table.sql  V3__create_inventory_table.sql
backend/src/test/kotlin/com/akaitigo/posvoice/: DatabaseSslConfigTest.kt  HealthResourceTest.kt
backend/src/test/kotlin/com/akaitigo/posvoice/auth/: ApiKeyAuthMechanismTest.kt
backend/src/test/kotlin/com/akaitigo/posvoice/query/: QueryResourceTest.kt  SalesRepositoryTest.kt
backend/src/test/kotlin/com/akaitigo/posvoice/voice/: VoiceEngineClientTest.kt  VoiceWebSocketTest.kt
backend/src/test/resources/: application.properties
docs/: PRD.md  harvest.md  hooks-structure.md
docs/adr/: 0001-voice-streaming-pipeline-architecture.md  0002-fuzzy-matching-algorithm-selection.md  0003-websocket-authentication.md  0004-grpc-insecure-port.md
frontend/: .oxlintrc.json  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  main.tsx  types.ts  vite-env.d.ts
frontend/src/components/: MatchList.test.tsx  MatchList.tsx  MicButton.test.tsx  MicButton.tsx  ProductSearch.test.tsx  ProductSearch.tsx  QueryResultDisplay.test.tsx  QueryResultDisplay.tsx  TranscriptDisplay.test.tsx  TranscriptDisplay.tsx
frontend/src/hooks/: useProductSearch.test.ts  useProductSearch.ts  useQuery.test.ts  useQuery.ts  useTts.test.ts  useTts.ts  useVoice.test.ts  useVoice.ts
proto/: query_service.proto
scripts/: post-lint.sh
voice-engine/: pyproject.toml
voice-engine/src/pos_voice_concierge/: __init__.py  audio_converter.py  fuzzy_matcher.py  grpc_server.py  intent_classifier.py  product_repository.py  quantity_parser.py  query_service.py  response_generator.py  server_main.py  whisper_engine.py
voice-engine/tests/: test_audio_converter.py  test_fuzzy_matcher.py  test_grpc_server.py  test_intent_classifier.py  test_product_repository.py  test_quantity_parser.py  test_query_service.py  test_response_generator.py  test_whisper_engine.py
